basestyle.css
/* ... */
/*Upgrades upgrades tab styling start*/

.type-upgrades-wrapper {
    display: flex;
    flex-direction: column;

}

.upgrades-titles {
    width: 100%;
    border-bottom: 1px solid black;
    padding-left: 5px;
    font-size: 20px;
}

.upgrades-purchase-wrapper {
    display: grid;
    grid-template-columns: repeat(5, minmax(60px, 20%));
    grid-template-rows: repeat(1, 100%);
    padding: 5px;
    align-items: center;
    justify-items: center;
}

.upgrades-purchase-button {
    height: 55px;
    width: 90%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 10%;
    align-items: center;
    z-index: 100;
    min-width: 55px;
}

.upgrades-purchase-button span {
    font-size: 15px;
}


/*Upgrades upgrades tab styling end*/

/*Upgrades golems tab styling start*/

.golems {
    align-items: center;
    gap: 5px;
}

.golems-top-wrapper {
    display: flex;
    justify-content: center;
    gap: 30px;
}

.golems-construct {
    height: 75px;
    width: 150px;
    background-color: wheat;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    margin-bottom: 10px;
}

.golem-build-button {
    height: 25px;
    width: 65px;
}

.golem-assignment-type-wrapper {
    height: 10%;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 30px;
}

.assignment-type-selector-button {
    height: 30px;
    width: 55px;
}

.golem-remove-active {
    background-color: red;
}

.golem-assign-active {
    background-color: green;
}



.golem-assignment-wrapper {
    display: grid;
    grid-template-columns: repeat(5, 20%);
    grid-template-rows: repeat(1, 60px);
    width: 100%;
    justify-items: center;
    align-items: center;
}

.golem-assignment {
    background-color: bisque;
    height: 90%;
    width: 90%;
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex-direction: column;
    font-size: 15px;
}




.golem-assignment-add-button,
.golem-assignment-remove-button {
    height: 20px;
    width: 20px;
}

/*Upgrades golems tab styling end*/

/* upgrades spellbook tab styleing start*/

.spellbook-display {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(3, 1fr);
    justify-items: center;
    align-items: center;
}

.spell-display {
    height: 90%;
    width: 90%;
    min-height: 100px;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    border: 2px solid black;
    padding: 5px;
}

.exp-display {
    height: 25%;
    width: 85%;
    display: flex;
    border: 1px solid black;
    border-radius: 25px;
    position: relative;
    overflow: hidden;
    background-color: rgb(240, 222, 196);
}

.exp-numbers {
    position: absolute;
    width: 100%;
    display: flex;
    justify-content: center;
}

.exp-bar {
    background-color: rgb(209, 145, 61);
}

.heal-color {
    background-color: rgb(56, 209, 56);
}

.manaBolt-color {
    background-color: rgb(56, 209, 209);
}

/* upgrades spellbook tab styleing end*/

/*Upgrades box styling end*/

/*Combat box styling start*/

.combat-wrapper {
    grid-column: 1;
    grid-row: 2 /4;
    background-color: rgb(163, 151, 168);
    border: 1px solid rgb(77, 77, 77);
    display: flex;
    flex-wrap: wrap;

}

/* player and enemy info display start*/

.player-wrapper,
.enemy-wrapper {
    height: 20%;
    min-height: 100px;
    width: 50%;
    display: flex;
    flex-direction: column;
    border: 1px solid black;
    position: relative;
    font-size: 1rem;
}

.player-name,
.enemy-name {
    margin: 5px;
    position: absolute;
    top: 0;
    left: 25%;
}

.player-attack,
.enemy-attack {
    position: absolute;
    top: 20%;
    left: 15%;
    width: 60%;
}

.player-defense,
.enemy-defense {
    position: absolute;
    top: 35%;
    left: 15%;
    width: 60%;
}








.player-health,
.enemy-health {
    height: 15%;
    width: 60%;
    position: absolute;
    top: 50%;
    left: 15%;
    display: flex;
    justify-content: space-between;
}

.health-numbers {
    position: absolute;
    width: 100%;
    display: flex;
    justify-content: center;
}

.health-display {
    width: 85%;
    display: flex;
    border: 1px solid black;
    border-radius: 25px;
    position: relative;
    overflow: hidden;
}

.player-health-bar,
.enemy-health-bar {
    background-color: rgb(212, 60, 60);
    width: 100%;
}





.player-mana,
.enemy-mana {
    height: 15%;
    width: 60%;
    position: absolute;
    top: 65%;
    left: 15%;
    display: flex;
    justify-content: space-between;
}

.mana-numbers {
    position: absolute;
    width: 100%;
    display: flex;
    justify-content: center;
}

.mana-display {
    width: 85%;
    display: flex;
    border: 1px solid black;
    border-radius: 25px;
    position: relative;
    overflow: hidden;
}

.player-mana-bar,
.enemy-mana-bar {
    background-color: rgb(86, 86, 212);
    width: 100%;
}

/* player and enemy info display end*/

.tower-wrapper {
    height: 80%;
    max-height: calc(100% - 100px);
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.floor-room-display {
    position: absolute;
    top: 5px;
    left: 5px;
}

.fight-buttons-section {
    position: absolute;
    top: 5px;
    right: 5px;
    display: flex;
    flex-direction: column;
}

.fight-buttons-section button {
    height: 35px;
    width: 75px;
}

/*Combat tower styling start*/

.circle-outer {
    border: 1px solid black;
    height: calc(59vmin - 100px);
    width: calc(59vmin - 100px);
    border-radius: 50%;
    list-style: none;
    overflow: hidden;
}

.circle-inner {
    border: 1px solid black;
    top: 17.5%;
    left: 17.5%;
    width: 65%;
    height: 65%;
    border-radius: 50%;
    list-style: none;
    overflow: hidden;
}
/* ... */

